fix: corrected horizontal scrolling bug by making carousel img smaller

--- a/app/globals.module.css
+++ b/app/globals.module.css
@@ -1,16 +1,10 @@
-/*html,*/
-body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  /*min-height: 100vh; */
-}
 
 
 .container {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  width: 100%;
   /*display: flex;*/
   /*margin: 0;*/
   /*padding: 0;*/
@@ -22,16 +16,16 @@ body {
 }
 
 .middle {
-  overflow-y: auto; /* Enables scrolling */
+  overflow-y: auto; 
   /*height: 100vh;*/
 }
 
 
-@media only screen and (max-width: 550px) {
-  .bottom {
-    height:50vw;
-  }
-}
+/*@media only screen and (max-width: 550px) {*/
+/*  .bottom {*/
+/*    height:50vw;*/
+/*  }*/
+/*}*/
 
 
 
@@ -41,8 +35,7 @@ body {
 /* Main footer styling */
 .siteFooter {
   border-top: 1px solid #e8e8e8;
-  padding: 30px 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  /*padding: 30px 0;*/
   font-size: 15px;
   line-height: 1.5;
   color: #828282;
